# Lumen

./: .gitignore  ARCHITECTURE.md  DEVLOG.md  README.md  legacy_phase2.py  pyproject.toml
lumen/: __init__.py  config.py  main.py
lumen/agent/: executor.py  planner.py  safety.py  schemas.py
lumen/llm/: __init__.py  ollama_client.py
lumen/tools/: __init__.py  apps.py  files.py  screen.py  shell.py
lumen/ui/: __init__.py  overlay.py  server.py  state.py
lumen/voice/: __init__.py  recorder.py  stt.py  tts.py
tests/: test_main.py  test_planner.py  test_safety.py  test_ui_state.py  test_voice.py
