[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-local"
version = "0.3.0"
description = "Local-first macOS desktop agent prototype."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
voice = [
  "mlx-whisper>=0.4.3",
  "numpy>=1.26",
  "scipy>=1.11",
  "sounddevice>=0.5",
]

[dependency-groups]
dev = [
  "pytest>=8",
]

[project.scripts]
lumen = "lumen.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["lumen*"]
